@startuml





/' Objects '/

class Application {
	+fr : Fruit*
	+sk : HSnake*
	+wdw : MainSDLWindow*
	+s : Segment*
	+replay() : bool
	+runGame(bool done) : bool
	-color : int
	-sizeOfSquare : int
	+deleteObject() : void
	+deleteWindow() : void
	+initGame() : void
	+initWindow() : void
}


class Fruit {
	+appleR : int
	+appleR : int
	+appleR : int
	+appleR : int
	+appleR : int
	+appleX : int
	+appleY : int
	+n : int
	+drawApple(int sizeOfSquare, SDL_Renderer* renderer) : void
	+initApple(int rows, int posX, int posY) : void
	+newApple(int sizeOfSquare, SDL_Renderer* renderer, int rows, int posX, int posY, int* score) : void
	+rgbFruit() : void
}


class HSnake {
	+next : Segment*
	+hcollision(int rows) : bool
	+isOnApple(int appleX, int appleY) : bool
	+dirX : int
	+dirX : int
	+dirX : int
	+headB : int
	+headG : int
	+headR : int
	+posX : int
	+posX : int
	+posX : int
	+drawHead(int sizeOfSquare, SDL_Renderer* renderer) : void
	+keyEnter() : void
	+move(bool eat, int sizeOfSquare, SDL_Renderer* renderer) : void
}


class MainSDLWindow {
	+MainSDLWindow()
	+~MainSDLWindow()
	+getRenderer() : SDL_Renderer*
	-renderer : SDL_Renderer*
	+getWindow() : SDL_Window*
	-window : SDL_Window*
	+gridDarkR : int
	+gridDarkR : int
	+gridDarkR : int
	+gridDarkR : int
	+gridDarkR : int
	+gridLightR : int
	+gridLightR : int
	+gridLightR : int
	+gridLightR : int
	+gridLightR : int
	+init(int width) : int
	+drawWindow(int SizeOfSquare, int width, int size) : void
	+draw_digit(int digit, int posX, int posY) : void
	+draw_number(int number, int posX, int posY) : void
	+gridColor(int score) : void
}


class Segment {
	+Segment()
	+next : Segment*
	+collision(int hposX, int hposY) : bool
	+posX : int
	+posX : int
	+posX : int
	+segmentB : int
	+segmentG : int
	+segmentR : int
	+drawSegment(int sizeOfSquare, SDL_Renderer* renderer) : void
	+follow(int exposX, int exposY, bool eat, int sizeOfSquare, SDL_Renderer* renderer) : void
	+init(int nposX, int nposY) : void
}





/' Inheritance relationships '/




/' Aggregation relationships '/

.Application o-- .Fruit


.Application o-- .HSnake


.Application o-- .MainSDLWindow


.Application o-- .Segment


.HSnake o-- .Segment


.Segment o-- .Segment






/' Nested objects '/



@enduml

